table and sidbar alignment issue fixed, new like icons, joined()/liked() button functions in progress

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -45,6 +45,12 @@ a {
   color: black;
 }
 
+/* home page stuff */
+#homePage_feed
+{
+   display: flex;
+   width: 100%;
+}
 
  #main_feed {
  width: 75%;
@@ -68,14 +74,14 @@ a {
  
  
  #main_sidebar {
-    width: 130px;
-    position: fixed;
-    z-index: 1;
-    top: 20px;
-    left: 10px;
-    background: #eee;
-    overflow-x: hidden;
-    padding: 8px 0;
+width: 20%;
+ border-color: blue;
+ border-width:1px ;
+ border: medium;
+    padding: 2px;
+    float:right;
+background-color: grey;
+margin: 15px;
  }
          
 .dropbtn {
